Prior to PCI implemetation

--- a/misc/riscv64-virt.dts
+++ b/misc/riscv64-virt.dts
@@ -30,7 +30,7 @@
 
 	memory@80000000 {
 		device_type = "memory";
-		reg = <0x00 0x80000000 0x00 0x8000000>;
+		reg = <0x00 0x80000000 0x01 0x26cfe000>;
 	};
 
 	cpus {
@@ -87,7 +87,7 @@
 
 	chosen {
 		stdout-path = "/soc/serial@10000000";
-		rng-seed = <0x2689bd8f 0xa1688187 0xbef89577 0x948adf25 0x44b1301d 0x543e6a13 0x9d5accb2 0x1110ffed>;
+		rng-seed = <0x14242546 0xf86d380 0x3ea2957d 0x8e5097a 0x6e52518c 0x41e72872 0xd578ea06 0x82c80f8a>;
 	};
 
 	soc {
