Cleaned repo of non-working and unusable code.

--- a/misc/riscv64-virt.dts
+++ b/misc/riscv64-virt.dts
@@ -87,7 +87,7 @@
 
 	chosen {
 		stdout-path = "/soc/serial@10000000";
-		rng-seed = <0x14242546 0xf86d380 0x3ea2957d 0x8e5097a 0x6e52518c 0x41e72872 0xd578ea06 0x82c80f8a>;
+		rng-seed = <0x7ba3833e 0x19719403 0xfa43ac2b 0xe6df2676 0x2d8a10a1 0xf98a35f8 0x8f01cc82 0x377ede80>;
 	};
 
 	soc {
