Gutted kernel, added simple multitask

--- a/misc/riscv64-virt.dts
+++ b/misc/riscv64-virt.dts
@@ -30,7 +30,7 @@
 
 	memory@80000000 {
 		device_type = "memory";
-		reg = <0x00 0x80000000 0x01 0x26cfe000>;
+		reg = <0x00 0x80000000 0x00 0x40000000>;
 	};
 
 	cpus {
@@ -87,7 +87,7 @@
 
 	chosen {
 		stdout-path = "/soc/serial@10000000";
-		rng-seed = <0x7ba3833e 0x19719403 0xfa43ac2b 0xe6df2676 0x2d8a10a1 0xf98a35f8 0x8f01cc82 0x377ede80>;
+		rng-seed = <0x97ff2391 0xaec91375 0x8fbe8f37 0x39c1baf 0xb58ecd49 0x30d95d77 0xaa8ee92f 0x60585ea3>;
 	};
 
 	soc {
